# CMakeVcpkgManifest

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeVcpkgManifest.cpp  CMakeVcpkgManifest.h  README.md  tests2.cpp  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  msvc.yml
